--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMadvisory</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
@@ -49,12 +50,12 @@
                     <h5>Excelência em Consultoria</h5>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image: url('imagens/reuniao.webp')">
+            <div class="carousel-item" style="background-image: url('imagens/reuinao2.jpg')">
                 <div class="carousel-caption animate__animated animate__fadeIn">
                     <h5>Soluções Inovadoras</h5>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image: url('imagens/a9f87258-57a4-47cf-848e-2b475fdc541f.jpg')">
+            <div class="carousel-item" style="background-image: url('imagens/pa.jpg')">
                 <div class="carousel-caption animate__animated animate__fadeIn">
                     <h5>Parceria para o Sucesso</h5>
                 </div>
@@ -80,10 +81,10 @@
                         com foco na Gestão da Cultura;
                         Desenvolvimento da Liderança e
                         Gestão Organizacional.</p>
-                    <a href="#contato" class="btn btn-primary mt-3">Entre em contato</a>
+                    <a href="contato.html" class="btn btn-primary mt-3">Entre em contato</a>
                 </div>
                 <div class="col-md-6">
-                    <img src="https://source.unsplash.com/600x400/?business-meeting" alt="Sobre Nós" class="section-image">
+                    <img src="imagens/istockphoto-2164246377-612x612.jpg" alt="Sobre Nós" class="section-image">
                 </div>
             </div>
         </div>
@@ -93,15 +94,15 @@
     <section id="proposito" class="section-padding bg-light-blue">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6 order-md-2">
-                    <h2 class="mb-4 text-blue">Propósito</h2>
-                    <p>Desenvolver dentro das organizações
+                <div class="col-md-6 order-md-2 text-white">
+                    <h2 class="mb-4 ">Propósito</h2>
+                    <p >Desenvolver dentro das organizações
                         uma cultura e liderança construtiva a
                         fim de elevar o bem-estar da equipe e
                         resultados da operação.</p>
                 </div>
                 <div class="col-md-6 order-md-1">
-                    <img src="https://source.unsplash.com/600x400/?purpose" alt="Propósito" class="section-image">
+                    <img src="imagens/proposito.jpg" alt="Propósito" class="section-image">
                 </div>
             </div>
         </div>
@@ -110,75 +111,103 @@
     <!-- Missão, Visão & Valores -->
     <section id="missao" class="section-padding">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <h2 class="mb-4 text-blue">Missão, Visão & Valores</h2>
-                    <h4 class="text-blue">Missão</h4>
-                    <p>Oferecer às empresas, serviço de excelência no
-                        ramo de Desenvolvimentos de Liderança e Cultura, a
-                        fim de torná-las mais humanizadas e eficazes</p>
-                    <h4 class="text-blue">Visão</h4>
-                    <p>Ser uma empresa de referência na área de Gestão de
-                        Cultura e Liderança, oferecendo um desenvolvimento
-                        humano organizacional eficaz nas empresas as quais
-                        atuamos
-                        </p>
-                    <h4 class="text-blue">Valores</h4>
-                    <ul>
-                        <li>Comprometimento;
-                        </li>
-                        <li>Respeito por todos;</li>
-                        <li>Trabalho em Equipe;
-                        </li>
-                        <li>Ética</li>
-                        <li>Busca pela melhoria contínua de nossos serviços.
-                        </li>
-                    </ul>
-                    <a href="#contato" class="btn btn-primary mt-3">Entre em contato</a>
+            
+            <h2 class="text-center mb-5 text-blue">Missão, Visão & Valores</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-primary">
+                        <div class="card-body text-center">
+                            <i class="bi bi-bullseye text-blue mb-3" style="font-size: 2rem;"></i>
+                            <h4 class="card-title text-blue">Missão</h4>
+                            <p class="card-text">Oferecer às empresas, serviço de excelência no
+                                ramo de Desenvolvimentos de Liderança e Cultura, a
+                                fim de torná-las mais humanizadas e eficazes
+                                </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <img src="https://source.unsplash.com/600x400/?mission-vision-values" alt="Missão, Visão & Valores" class="section-image">
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-primary">
+                        <div class="card-body text-center">
+                            <i class="bi bi-eye text-blue mb-3" style="font-size: 2rem;"></i>
+                            <h4 class="card-title text-blue">Visão</h4>
+                            <p class="card-text">Ser uma empresa de referência na área de Gestão de
+                                Cultura e Liderança, oferecendo um desenvolvimento
+                                humano organizacional eficaz nas empresas as quais
+                                atuamos
+                                </p>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-primary">
+                        <div class="card-body text-center">
+                            <i class="bi bi-star text-blue mb-3" style="font-size: 2rem;"></i>
+                            <h4 class="card-title text-blue">Valores</h4>
+                            <ul class="list-unstyled">
+                                <li>Comprometimento</li>
+                                <li>Respeito por todos</li>
+                                <li>Trabalho em Equipe</li>
+                                <li>Ética</li>
+                                <li>Busca pela melhoria contínua de nossos serviços</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
+            <a href="contato.html" class="btn btn-primary mt-3">Entre em contato</a>
         </div>
     </section>
 
     <!-- Áreas de Atuação -->
     <section id="atuacao" class="section-padding bg-light-blue">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 order-md-2">
-                    <h2 class="mb-4 text-blue">Áreas de Atuação</h2>
-                    <div class="mb-4">
-                        <h4 class="text-blue">Desenvolvimento de Liderança</h4>
-                        <p>Diagnóstico e desenvolvimento
-                            de liderança através de pesquisas
-                            e planos de ações individuais e
-                            coletivos para melhorar o
-                            impacto dos líderes na
-                            organização, com foco no
-                            engajamento das equipes.</p>
+            <h2 class="text-center mb-5 text-white">Áreas de Atuação</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="card mb-4 border-primary">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center mb-3">
+                                <i class="bi bi-graph-up text-blue me-3" style="font-size: 2rem;"></i>
+                                <h4 class="card-title text-blue mb-0">Desenvolvimento de Liderança</h4>
+                            </div>
+                            <p class="card-text">Diagnóstico e desenvolvimento
+                                de liderança através de pesquisas
+                                e planos de ações individuais e
+                                coletivos para melhorar o
+                                impacto dos líderes na
+                                organização, com foco no
+                                engajamento das equipes.</p>
+                        </div>
                     </div>
-                    <div class="mb-4">
-                        <h4 class="text-blue">Gestão de Cultura</h4>
-                        <p>Diagnóstico e
-                            desenvolvimento de planos
-                            de ações para que os
-                            comportamentos e atitudes
-                            dos colaboradores estejam
-                            alinhados com a cultura
-                            organizacional desejada.</p>
+                    <div class="card mb-4 border-primary">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center mb-3">
+                                <i class="bi bi-gear text-blue me-3" style="font-size: 2rem;"></i>
+                                <h4 class="card-title text-blue mb-0">Gestão de Cultura </h4>
+                            </div>
+                            <p class="card-text">Diagnóstico e
+                                desenvolvimento de planos
+                                de ações para que os
+                                comportamentos e atitudes
+                                dos colaboradores estejam
+                                alinhados com a cultura
+                                organizacional desejada.</p>
+                        </div>
                     </div>
-                    <div>
-                        <h4 class="text-blue">Estrutura Organizacional/ Gestão de Pessoas</h4>
-                        <p>Redesenho da estrutura organizacional,
-                            descritivo de funções, processos de
-                            remuneração por mérito e implantação de
-                            sistemas de avaliação de performances.</p>
+                    <div class="card mb-4 border-primary">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center mb-3">
+                                <i class="bi bi-laptop text-blue me-3" style="font-size: 2rem;"></i>
+                                <h4 class="card-title text-blue mb-0">Estrutura Organizacional</h4>
+                            </div>
+                            <p class="card-text">Redesenho da estrutura organizacional,
+                                descritivo de funções, processos de
+                                remuneração por mérito e implantação de
+                                sistemas de avaliação de performances.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6 order-md-1">
-                    <img src="https://source.unsplash.com/600x400/?business-strategy" alt="Áreas de Atuação" class="section-image">
                 </div>
             </div>
         </div>
@@ -217,7 +246,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#contato" class="btn btn-primary mt-3">Entre em contato</a>
+                    <a href="contato.html" class="btn btn-primary mt-3">Entre em contato</a>
                 </div>
             </div>
         </div>
@@ -226,13 +255,19 @@
     <!-- Expertise -->
     <section id="expertise" class="section-padding bg-light-blue">
         <div class="container">
-            <h2 class="text-center mb-5 text-blue">Nossa Expertise</h2>
+            <h2 class="text-center mb-5 text-white">Nossa Expertise</h2>
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-3">
                     <div class="card h-100 border-primary">
                         <div class="card-body">
-                            <h4 class="card-title text-blue">Análise de Mercado</h4>
-                            <p class="card-text">Identificamos oportunidades e ameaças para decisões estratégicas.</p>
+                            <h4 class="card-title text-blue"></h4>
+                            <p class="card-text">Experiência
+                                Profissional em
+                                Liderança de
+                                Operações e
+                                Reestruturação de
+                                Negócios
+                                </p>
                         </div>
                     </div>
                 </div>
@@ -242,8 +277,10 @@
                 <div class="col-md-3">
                     <div class="card h-100 border-primary">
                         <div class="card-body">
-                            <h4 class="card-title text-blue">Gestão de Projetos</h4>
-                            <p class="card-text">Gerenciamos projetos complexos com eficiência e precisão.</p>
+                            <h4 class="card-title text-blue"></h4>
+                            <p class="card-text">Ferramentas de
+                                Diagnóstico de
+                                Cultura e Liderança</p>
                         </div>
                     </div>
                 </div>
@@ -253,8 +290,19 @@
                 <div class="col-md-3">
                     <div class="card h-100 border-primary">
                         <div class="card-body">
-                            <h4 class="card-title text-blue">Sucesso do Cliente</h4>
-                            <p class="card-text">Garantimos resultados excepcionais e crescimento sustentável.</p>
+                            <h4 class="card-title text-blue">SOLUÇÕES
+                                CUSTOMIZADAS</h4>
+                            <p class="card-text">Gestão da Cultura
+                                e Engajamento.</p>
+                            <p class="card-text">Desenvolvimento
+                                de Liderança.</p>
+                            <p class="card-text">Estrutura
+                                Organizacional.</p>
+                            <p class="card-text">Gestão de
+                                Pessoas.</p>
+                            <p class="card-text">Planejamento
+                                Estratégico.</p>
+                            <p class="card-text">Aconselhamento</p>
                         </div>
                     </div>
                 </div>
@@ -268,13 +316,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>LMadvisory</h5>
-                    <p>Soluções estratégicas para o seu negócio</p>
+                    <p>"O sucesso é a soma de pequenos esforços
+                        repetidos dia após dia"
+                        </p>
+                    <p2>Robert Collier</p2>
                 </div>
                 <div class="col-md-6">
                     <h5>Contato</h5>
-                    <p>Email: contato@lmadvisory.com</p>
-                    <p>Telefone: (11) 1234-5678</p>
-                    <p>Endereço: Av. Paulista, 1000 - São Paulo, SP</p>
+                    <p>Email: lmadvisory@gmail.com</p>
+                    <p>Telefone: (11) 95930-3580</p>
+                    <p>Endereço: São Paulo, SP</p>
                 </div>
             </div>
         </div>
