--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h5>Soluções Inovadoras</h5>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image: url('imagens/pa.jpg')">
+            <div class="carousel-item" style="background-image: url('imagens/parceria.jpg')">
                 <div class="carousel-caption animate__animated animate__fadeIn">
                     <h5>Parceria para o Sucesso</h5>
                 </div>
