--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h2 class="mb-4 text-blue">Sobreee Nós</h2>
+                    <h2 class="mb-4 text-blue">Sobre Nós</h2>
                     <p>Somos uma empresa fundada em 2015,
                         com foco na Gestão da Cultura;
                         Desenvolvimento da Liderança e
