--- a/contato.html
+++ b/contato.html
@@ -34,18 +34,18 @@
             <h1 class="text-center mb-4 text-white">Entre em Contato t</h1>
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white text-dark p-4 rounded">
-                    <form id="contactForm">
+                    <form action="https://formspree.io/f/xeoqzbpb" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
-                            <input type="text" class="form-control" id="name" required>
+                            <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" required>
+                            <input type="email" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Mensagem</label>
-                            <textarea class="form-control" id="message" rows="5" required></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
@@ -74,41 +74,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    
-    // Captura os dados do formulário
-    var name = document.getElementById('name').value;
-    var email = document.getElementById('email').value;
-    var message = document.getElementById('message').value;
 
-    // Verifica se os campos estão preenchidos
-    if (!name || !email || !message) {
-        alert('Por favor, preencha todos os campos.');
-        return;
-    }
-
-    // Envia os dados para o Google Apps Script
-    fetch('/api/proxy', { // Substitua com a URL do seu Apps Script
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name, email, message })
-    })
-    .then(response => response.json())
-    .then(data => {
-        if (data.status === 'success') {
-            alert('Mensagem enviada com sucesso!');
-            document.getElementById('contactForm').reset();  // Limpa o formulário após o envio
-        } else {
-            alert('Erro ao enviar mensagem: ' + data.message);
-        }
-    })
-    .catch(error => {
-        console.error('Erro:', error);
-        alert('Houve um problema ao enviar a mensagem. Tente novamente mais tarde.');
-    });
-});
-    </script>
 </body>
 </html>
