--- a/contato.html
+++ b/contato.html
@@ -34,8 +34,7 @@
             <h1 class="text-center mb-4 text-white">Entre em Contato t</h1>
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white text-dark p-4 rounded">
-                    <form action="https://formspree.io/f/xeoqzbpb" method="POST" 
-                         onsubmit="window.location.href='sucesso.html'; return true;">
+                    <form action="https://formspree.io/f/xeoqzbpb" method="POST" onsubmit="window.location.href='sucesso.html'; return true;">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
                             <input type="text" class="form-control" id="name" name="name" required>
