--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
             <h1 class="text-center mb-4 text-white">Entre em Contato t</h1>
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white text-dark p-4 rounded">
-                    <form id="contactForm" action="https://formspree.io/f/xeoqzbpb" method="POST">
+                    <form action="https://formspree.io/f/xeoqzbpb" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
                             <input type="text" class="form-control" id="name" name="name" required>
@@ -75,33 +75,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.getElementById("contactForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Impede o envio padrão do formulário
-    
-            const form = document.getElementById("contactForm");
-            const formData = new FormData(form);
-    
-            // Envia os dados para o Formspree via fetch
-            fetch(form.action, {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
-                if (response.ok) {
-                    // Se o envio for bem-sucedido, redireciona para a página de sucesso
-                    window.location.href = 'sucesso.html';
-                } else {
-                    // Caso haja erro
-                    alert('Houve um problema ao enviar sua mensagem. Tente novamente!');
-                }
-            })
-            .catch(error => {
-                // Se ocorrer algum erro com a requisição
-                console.error('Erro ao enviar o formulário:', error);
-                alert('Erro de conexão. Tente novamente mais tarde.');
-            });
-        });
-    </script>
+
 </body>
 </html>
