--- a/contato.html
+++ b/contato.html
@@ -17,12 +17,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html#sobre">Sobre Nós</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#proposito">Propósito</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#missao">Missão, Visão & Valores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#atuacao">Áreas de Atuação</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#time">Time</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#expertise">Expertise</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#sobre">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#proposito">Propósito</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#missao">Missão, Visão & Valores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#atuacao">Áreas de Atuação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#time">Time</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#expertise">Expertise</a>
+                    </li>
                 </ul>
             </div>
         </div>
